# polympc

./: LQ.csv  LR.csv  MQ.csv  README.md
benchmark/: CMakeLists.txt  autodiff_bench.cpp  qp_bench.cpp  qp_bench_plot.py  sqp_bench.cpp  timer.hpp
examples/: CMakeLists.txt  resource_mpc.cpp
src/: chebyshev_ms.hpp  nmpc.hpp
src/control/: CMakeLists.txt  double_integrator_model.hpp  nmpc.hpp  nmpc_test.cpp  resource_mpc.cpp  simple_robot_model.hpp  timer.hpp
src/solvers/: bfgs.hpp  qp_solver.hpp  sqp.hpp
